--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,11 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "multer": "^2.0.2",
-    "pdf.js-extract": "^0.2.1"
+    "openai": "^5.12.2",
+    "pdf-to-img": "^4.5.0",
+    "tmp": "^0.2.5"
   }
 }
